--- a/Mobile Login Page/index.html
+++ b/Mobile Login Page/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/sign-up.css">
     <link rel="stylesheet" href="./css/login-page.css">
+    <link rel="fav icon" href="./assets/login ico.jpg">
     <title>Messages App</title>
 </head>
 
