Updated Yufat Website

--- a/Yufat Website/contact.html
+++ b/Yufat Website/contact.html
@@ -35,7 +35,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="nav_link"><a class="nav_link" href="#">SERVICES</a></li>
+                    <li class="nav_link"><a class="nav_link" href="services.html">SERVICES</a></li>
                     <li class="nav_link"><a class="nav_link" href="team">TEAM</a></li>
                     <li class="nav_link"><a class="nav_link" href="gallery.html">GALLERY</a></li>
                     <li class="nav_link"><a class="nav_link" href="contact.html">CONTACT</a></li>
@@ -51,114 +51,54 @@
         </nav>
 
         <!-- ------------  Banner  -------------- -->
-        <div class="banner about_banner services_banner">
+        <div class="banner about_banner contact_banner">
             <div class="banner-content about_banner_content">
-                <h1 class="banner-title mt-s mb-m">SERVICES</h1>
+                <h1 class="banner-title mt-s mb-m">CONTACT</h1>
             </div>
         </div>
     </header>
 
-
     <!-- -------------- Main ---------------- -->
     <main>
-        <section class="services_section techLeap_section">
-            <div class="main_section_title">
-                <div class="main_section_title_bg">
-                    <img src="./assets/Services-images/services-title-bg.png" alt="">
+        <section class="contact_section">
+            <div class="contact_container">
+                <div class="form_container">
+                    <form>
+                        <div class="form_inputs">
+                            <input class="form_el" type="text" placeholder="Enter your Name">
+                            <input class="form_el" type="text" placeholder="Enter your Email">
+                            <textarea class="form_el" id="textarea" cols="30" rows="10"
+                                placeholder="Enter your message..."></textarea>
+                            <button class="form_btn">SUBMIT</button>
+                        </div>
+                    </form>
+
+                    <div class="form_map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6979.3541968239015!2d31.049361071546983!3d0.48037570683094116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1skyegegwa%20refugee%20settlement!5e1!3m2!1sen!2sug!4v1695808867935!5m2!1sen!2sug"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
 
-                <p class="main_section_title_text">TechLeap</p>
-            </div>
-
-            <div class="techLeap_text_container">
-                <p>
-                    TechLeap's mission is to empower refugee
-                    youth with crucial computer literacy skills.
-                    Our programs offer comprehensive training in
-                    Microsoft software, internet proficiency, and graphic
-                    design. We believe that these skills are essential for
-                    unlocking opportunities in today's digital
-                    world. By equipping young refugees with these
-                    capabilities, we aim to bridge the
-                    technological divide and enable them to build
-                    brighter futures.
-                </p>
-            </div>
-
-            <div class="techLeap_packages_container">
-                <!-- techLeap_packages_box 1 -->
-                <div class="techLeap_packages_box">
-                    <div class="techLeap_package_image">
-                        <img src="./assets/Services-images/MS Packages img.png" alt="">
+                <div class="form_contact_details">
+                    <div class="form_contact_box">
+                        <span><i class="fa fa-phone"></i>Call Us</span>
+                        <p>+256 760 - 752 - 828</p>
+                        <p>+256 760 - 752 - 828</p>
                     </div>
 
-                    <h5 class="techLeap_package_title">Microsoft Packages</h5>
-                    <p class="techLeap_package_text">
-                        Create and edit documents containing text
-                        and images, work with data in spreadsheets and
-                        create presentations and posters.
-                        Word. Excel. PowerPoint.
-                    </p>
-
-                </div>
-
-                <!-- techLeap_packages_box 2 -->
-                <div class="techLeap_packages_box">
-                    <div class="techLeap_package_image">
-                        <img src="./assets/Services-images/services-photoshop-image.png" alt="">
-                        <img src="./assets/Services-images/services-canva-image.png" alt="">
+                    <div class="form_contact_box">
+                        <span><i class="fa fa-location-arrow"></i>Location</span>
+                        <p> kyaka II Refugee Settlement,</p>
+                        <p>Kyegegwa</p>
                     </div>
 
-                    <h5 class="techLeap_package_title">Graphic Design</h5>
-                    <p class="techLeap_package_text">
-                        Combine images, typography, colors,
-                        and other elements to convey a message
-                        or create a visual representation of an idea.
-                        Adobe Photoshop & Canva
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section class="services_section techLeap_section">
-            <div class="main_section_title">
-                <div class="main_section_title_bg">
-                    <img src="./assets/Services-images/services-digitalboda-title-bg.png" alt="">
-                </div>
-
-                <p class="main_section_title_text">Digital Boda</p>
-            </div>
-
-            <div class="techLeap_text_container">
-                <p>
-                    Digital Boda is revolutionizing education by bringing mobile computer lessons to primary
-                    and secondary schools through motorcycle-based
-                    outreach. We offer Computer Aided Learning (CAL)
-                    for primary schools, ensuring that young
-                    learners have access to cutting-edge technology.
-                    Additionally, we provide support for coding clubs in
-                    secondary schools, fostering the development
-                    of critical digital skills. By merging technology and
-                    education, Digital Boda is transforming
-                    the way students learn and grow.
-                </p>
-            </div>
-
-            <div class="digital_boda_packages_container techLeap_packages_container">
-                <!-- techLeap_packages_box 2 -->
-                <div class="techLeap_packages_box">
-                    <div class="techLeap_package_image">
-                        <img src="./assets/Services-images/services-html-image.png" alt="">
-                        <img src="./assets/Services-images/services-css-image.png" alt="">
-                        <img src="./assets/Services-images/services-js-image.png" alt="">
+                    <div class="form_contact_box">
+                        <span><i class="fa fa-envelope"></i>Email Address</span>
+                        <p>youthunitedyufat@gmail.com</p>
+                        <p>info@yufat.org</p>
                     </div>
-
-                    <h5 class="techLeap_package_title">Web Development</h5>
-                    <p class="techLeap_package_text">
-                        Coding is crucial for creating websites, 
-                        web applications, and dynamic content
-                         HTML, CSS & Javascript
-                    </p>
                 </div>
             </div>
         </section>
