completed js for navBar

--- a/Yufat Website/index.html
+++ b/Yufat Website/index.html
@@ -141,7 +141,7 @@
                             needed to thrive in the digital era
                         </p>
 
-                        <a href="#"><button class="services_btn">Learn More <i
+                        <a href="services.html"><button class="services_btn">Learn More <i
                                     class="fa fa-arrow-right services_btn_arrow"></i></button></a>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                             in the era of technological transformation
                         </p>
 
-                        <a href="#"><button class="services_btn">Learn More <i
+                        <a href="services.html"><button class="services_btn">Learn More <i
                                     class="fa fa-arrow-right services_btn_arrow"></i></button></a>
                     </div>
                 </div>
