Added Testimonial slider functionality

--- a/Yufat Website/index.html
+++ b/Yufat Website/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +27,7 @@
 
             <div class="right_nav_menu flex align-center">
                 <ul class="nav_links">
-                <span class="nav_open_close_btns" id="close">x</span>
+                    <span class="nav_open_close_btns" id="close">x</span>
                     <li><a class="nav_link" href="index.html">HOME</a></li>
                     <li class="drop_down_link nav_link"><a class="nav_link" href="about.html">ABOUT <i
                                 class="fa fa-angle-down about-arrow"></i></a>
@@ -181,31 +183,87 @@
                 <p class="main_section_title_text">TESTIMONIALS</p>
             </div>
 
-            <div class="testimonials_container">
-                <div class="testimonial_card">
+            <div class="testimonials_container mySwiper">
+                <div class="testimonials_cards_container swiper-wrapper">
+                    <!-- testimonial_card 1 -->
+                    <div class="testimonial_card swiper-slide">
 
-                    <div class="testimonials_control_arrows">
-                        <span><i id="prev_btn" class='bx bx-left-arrow-alt'></i></span>
-                        <span><i id="next_btn" class='bx bx-right-arrow-alt'></i></span>
+                        <!-- <div class="testimonials_control_arrows">
+                            <span><i id="prev_btn" class='bx bx-left-arrow-alt'></i></span>
+                            <span><i id="next_btn" class='bx bx-right-arrow-alt'></i></span>
+                        </div> -->
+
+                        <div class="testimonial_image">
+                            <img src="./assets/Home-images/testimonial images/emmanuel bahanuzi-testimonial.png" alt="">
+                        </div>
+
+                        <h1 class="testimonial_name">Emmanuel Bahanuzi</h1>
+
+                        <p class="testimonial_description">
+                            Yufat has been a beacon of light in my life. When I had to leave my home country Rwanda due to War, I felt lost. Yufat's training in coding and Microsoft applications not only gave me a sense of purpose but also the tools to secure a stable job. Yufat doesn't just teach skills; they restore dignity and hope to refugees like me.
+                        </p>
                     </div>
 
-                    <div class="testimonial_image">
-                        <img src="./assets/Home-images/testimonies-profile-img.png" alt="">
+                    <!-- testimonial_card 2 -->
+                    <div class="testimonial_card swiper-slide">
+
+                        <!-- <div class="testimonials_control_arrows">
+                            <span><i id="prev_btn" class='bx bx-left-arrow-alt'></i></span>
+                            <span><i id="next_btn" class='bx bx-right-arrow-alt'></i></span>
+                        </div> -->
+
+                        <div class="testimonial_image">
+                            <img src="./assets/Home-images/testimonial images/kananura deus-testimonial.png" alt="">
+                        </div>
+
+                        <h1 class="testimonial_name">kananura Deus</h1>
+
+                        <p class="testimonial_description">
+                            Yufat gave me hope when I needed it the most. As a refugee, I had lost everything. But through their computer skills training, I gained a new lease on life. Learning coding and Microsoft applications not only empowered me but also opened doors to job opportunities. Yufat truly changes lives.
+                        </p>
                     </div>
 
-                    <h1 class="testimonial_name">Jules ombeni Babungula</h1>
+                    <!-- testimonial_card 3 -->
+                    <div class="testimonial_card swiper-slide">
 
-                    <p class="testimonial_description">
-                        When I arrived as a refugee, I felt lost and disconnected.
-                        YUFAT changed that. Through their coding
-                        and tech classes, I gained not only technical
-                        skills but also a sense of belonging. I now
-                        volunteer as a mentor at YUFAT, helping other
-                        refugees discover the power of technology.
-                        YUFAT's impact on my life has been immeasurable, and
-                        I am proud to pay it forward.
-                    </p>
+                        <!-- <div class="testimonials_control_arrows">
+                            <span><i id="prev_btn" class='bx bx-left-arrow-alt'></i></span>
+                            <span><i id="next_btn" class='bx bx-right-arrow-alt'></i></span>
+                        </div> -->
+
+                        <div class="testimonial_image">
+                            <img src="./assets/Home-images/testimonial images/mwamba-mercy-testimonial.png" alt="">
+                        </div>
+
+                        <h1 class="testimonial_name">Mwamba Mercy</h1>
+
+                        <p class="testimonial_description">
+                            Yufat is more than just an organization; it's a lifeline for people like me. Yufat taught me coding and Microsoft Word, helping me develop skills that I can use to rebuild my life. I'll forever be grateful to them.
+                        </p>
+                    </div>
+
+                    <!-- testimonial_card 4 -->
+                    <div class="testimonial_card swiper-slide">
+
+                        <!-- <div class="testimonials_control_arrows">
+                            <span><i id="prev_btn" class='bx bx-left-arrow-alt'></i></span>
+                            <span><i id="next_btn" class='bx bx-right-arrow-alt'></i></span>
+                        </div> -->
+
+                        <div class="testimonial_image">
+                            <img src="./assets/Home-images/testimonial images/uwase nadinah-testimonial.png" alt="">
+                        </div>
+
+                        <h1 class="testimonial_name">Uwase Nadinah</h1>
+
+                        <p class="testimonial_description">
+                            Yufat's commitment to empowering refugees through computer skills is truly remarkable. As a Rohingya refugee, I faced immense adversity, but Yufat's coding courses provided me with a sense of direction and hope for a better future. I now have the skills to pursue a career and contribute to society.
+                        </p>
+                    </div>
                 </div>
+                <div class="swiper-button-next testimonial_arrow_icon"></div>
+                <div class="swiper-button-prev testimonial_arrow_icon"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
 
@@ -284,6 +342,9 @@
         <h2 class="footer_yufat_name title_psuedo">YOUTH UNITED FOR AFRICAN TRANSFORMATION</h2>
     </footer>
 
+
+    <!-- Swiper Js -->
+    <script src="./js/swiper-bundle.min.js"></script>
     <script src="js/theme.js"></script>
     <script src="js/script.js"></script>
 </body>
