--- a/Yufat Website/services.html
+++ b/Yufat Website/services.html
@@ -43,7 +43,7 @@
                 </ul>
 
                 <div class="modes">
-                    <img src="./assets/Home-images/moon.png" id="theme-toggle-icon" alt="">
+                    <img src="./assets/Home-images/moon.png" id="theme-toggle-icon" class="services_dark" alt="">
                 </div>
 
                 <button class="btn nav_donate_btn">DONATE</button>
