--- a/Yufat Website/index.html
+++ b/Yufat Website/index.html
@@ -67,7 +67,7 @@
 
     <!-- -------------- Main ---------------- -->
     <main>
-        <section id="welcome-section" class="welcome_section">
+        <section  id="welcome-section" class="hidden welcome_section">
             <div class="welcome_text_content">
                 <h1 class="title_psuedo welcome_title mb-s">WELCOME TO YUFAT</h1>
                 <p class="welcome_par">
@@ -84,7 +84,7 @@
             </div>
         </section>
 
-        <section class="causes_section pt-b">
+        <section  class="hidden causes_section pt-b">
             <h1 class="title_psuedo section_title causes_title">CAUSES</h1>
             <div class="causes_card_container flex justify-space-between">
 
@@ -116,7 +116,7 @@
             </div>
         </section>
 
-        <section class="services_section">
+        <section  class="hidden services_section">
 
             <div class="main_section_title">
                 <div class="main_section_title_bg">
@@ -174,7 +174,7 @@
         </section>
 
 
-        <section class="services_section testimonials_section">
+        <section  class="hidden services_section testimonials_section">
             <div class="main_section_title">
                 <div class="main_section_title_bg">
                     <img src="./assets/Home-images/testimonies-title-bg.png" alt="">
@@ -268,7 +268,7 @@
         </section>
 
 
-        <section class="donate_section">
+        <section  class="hidden donate_section">
             <div class="donate_container">
                 <p class="donate_text mb-b">Assisting the Displaced and Vulnerable Children with Computer Education</p>
                 <button class="btn donate_btn">DONATE</button>
